Add forgot password and reset password feature for Student 2 Activity 4

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,12 @@
 PORT=3000
 MONGODB_URI=mongodb+srv://user123:user123@cluster10.dmgdn1x.mongodb.net/group10-project?retryWrites=true&w=majority&appName=Cluster10
+
+# Cấu hình CORS
+FRONTEND_URL=http://localhost:3001
+
+# Cấu hình JWT (để dùng cho authentication sau này)
+JWT_SECRET=your_jwt_secret_key
+JWT_EXPIRES_IN=24h
+
+# Cấu hình môi trường
+NODE_ENV=development
